// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageUploadPreview should render ImageUploadPreview with 1 uploading, 1 uploaded, and 1 failed image 1`] = `
<View
  style={
    Array [
      Object {
        "height": 70,
        "padding": 10,
      },
      Object {},
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "0",
          "state": "uploading",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "1",
          "state": "uploaded",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "2",
          "state": "upload_failed",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="grey"
                  hidesWhenStopped={true}
                  size="small"
                  testID="upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="inactive-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/reload1.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="retry-upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ImageUploadPreview should render ImageUploadPreview with all failed images 1`] = `
<View
  style={
    Array [
      Object {
        "height": 70,
        "padding": 10,
      },
      Object {},
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "0",
          "state": "upload_failed",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "1",
          "state": "upload_failed",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "2",
          "state": "upload_failed",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/reload1.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="retry-upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/reload1.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="retry-upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/reload1.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="retry-upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ImageUploadPreview should render ImageUploadPreview with all uploaded images 1`] = `
<View
  style={
    Array [
      Object {
        "height": 70,
        "padding": 10,
      },
      Object {},
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "0",
          "state": "uploaded",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "1",
          "state": "uploaded",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "2",
          "state": "uploaded",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="inactive-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="inactive-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="inactive-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ImageUploadPreview should render ImageUploadPreview with all uploading images 1`] = `
<View
  style={
    Array [
      Object {
        "height": 70,
        "padding": 10,
      },
      Object {},
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "0",
          "state": "uploading",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "1",
          "state": "uploading",
        },
        Object {
          "file": Object {
            "uri": "http://www.jackblack.com/tenac_iousd.bmp",
          },
          "id": "2",
          "state": "uploading",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="grey"
                  hidesWhenStopped={true}
                  size="small"
                  testID="upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="grey"
                  hidesWhenStopped={true}
                  size="small"
                  testID="upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "height": 50,
                "marginLeft": 5,
              },
              Object {},
            ]
          }
        >
          <View
            testID="active-upload-progress-indicator"
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "http://www.jackblack.com/tenac_iousd.bmp",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 50,
                    "width": 50,
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#0000004D",
                    "height": "100%",
                    "justifyContent": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF00",
                    "height": "100%",
                    "justifyContent": "center",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {},
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="grey"
                  hidesWhenStopped={true}
                  size="small"
                  testID="upload-progress-indicator"
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 20,
                "height": 20,
                "justifyContent": "center",
                "opacity": 1,
                "position": "absolute",
                "right": 5,
                "top": 5,
                "width": 20,
              }
            }
            testID="remove-image-upload-preview"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/icons/close-round.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 10,
                    "width": 10,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
